software/applications/podinfo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: podinfo
  labels:
    toolkit.fluxcd.io/tenant: dev-team
    istio-injection: enabled
