software/applications/podinfo/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: osdu-developer-web
  namespace: podinfo
spec:
  containers:
  - name: osdu-developer-web
    image: ghcr.io/azure/osdu-developer-web:main
    ports:
    - containerPort: 8080
