software/applications/podinfo/ingress.yaml
# ---
# apiVersion: security.istio.io/v1beta1
# kind: PeerAuthentication
# metadata:
#   name: default
#   namespace: podinfo
# spec:
#   mtls:
#     mode: STRICT
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: podinfo-rule
  namespace: podinfo
spec:
  host: podinfo.podinfo.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 100
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: podinfo
  namespace: podinfo
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/internal-gateway
    - istio-system/external-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: "podinfo.podinfo.svc.cluster.local"
            port:
              number: 9898
